Fixes background color shifting

--- a/src/styles/Main.module.css
+++ b/src/styles/Main.module.css
@@ -1,17 +1,9 @@
-@keyframes hueRotateAnim {
-  0% {
-    filter: hue-rotate(0deg);
-  }
-  100% {
-    filter: hue-rotate(360deg);
-  }
-}
-
 .main {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
+  transition: all 2s linear;
 }
 
 .mainModule {
